--- a/publication/index.html
+++ b/publication/index.html
@@ -269,6 +269,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://elifesciences.org/articles/04380">
+  Link to Journal
+</a>
+
 </p>
         </div>
 
@@ -300,6 +304,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://elifesciences.org/articles/03754">
+  Link to Journal
+</a>
+
 </p>
         </div>
 
@@ -330,6 +338,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://bmcneurosci.biomedcentral.com/articles/10.1186/1471-2202-14-156">
+  Link to Journal
+</a>
 
 </p>
         </div>
