--- a/publication/person-re-identification/index.html
+++ b/publication/person-re-identification/index.html
@@ -167,6 +167,11 @@
 <div class="pub" itemscope itemtype="http://schema.org/CreativeWork">
 
   
+<div class="article-header">
+  <img src="/img/showercurtain2.png" class="article-banner" itemprop="image">
+  
+</div>
+
 
 
   <div class="container pub-title">
@@ -300,6 +305,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline" href="https://elifesciences.org/articles/04380">
+  Link to Journal
+</a>
 
 
 
