--- a/publication/wait/index.html
+++ b/publication/wait/index.html
@@ -297,6 +297,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://elifesciences.org/articles/03754">
+  Link to Journal
+</a>
+
 
 
         </div>
