--- a/publication/clothing-search/index.html
+++ b/publication/clothing-search/index.html
@@ -297,6 +297,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://bmcneurosci.biomedcentral.com/articles/10.1186/1471-2202-14-156">
+  Link to Journal
+</a>
+
 
 
         </div>
