--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ during early development using the relatively simple and well-characterized nema
 
 <p>My email address is <strong>jarredfsanders at gmail com</strong></p>
 
-<p>My phone number is <strong>+l 3l2 843 8262</strong></p>
+<p>My phone number is <strong>+1 312 843 8262</strong></p>
 
 
     <div class="row">
@@ -670,7 +670,7 @@ during early development using the relatively simple and well-characterized nema
       
       <li>
         <i class="fa-li fa fa-phone fa-2x" aria-hidden="true"></i>
-        <span id="person-telephone" itemprop="telephone"><a href="tel:&#43;l%203l2%20843%208262">&#43;l 3l2 843 8262</a></span>
+        <span id="person-telephone" itemprop="telephone"><a href="tel:&#43;1%20312%20843%208262">&#43;1 312 843 8262</a></span>
       </li>
       
 
