--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         
         
         <li>
-          <a itemprop="sameAs" href="mailto:jarredfsanders%20[AT]%20gmail%20com" target="_blank">
+          <a itemprop="sameAs" href="mailto:jarredfsanders%20at%20gmail%20com" target="_blank">
             <i class="fa fa-envelope big-icon"></i>
           </a>
         </li>
