--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 
 <h1 id="welcome">Welcome!</h1>
 
-<p>I recently earned my doctorate in Genetics, Genomics, and Systems Biology
-at the <a href="https://www.uchicago.edu/">University of Chicago</a>. My advisor was <a href="https://biophysics.uchicago.edu/the-faculty/david_biron/"> Prof David Biron</a> in the Biophysics Program and the James Franck Institute.</p>
+<p>I earned my doctorate in Genetics, Genomics, and Systems Biology
+at the <a href="https://www.uchicago.edu/">University of Chicago</a> in 2017. My advisor was <a href="https://biophysics.uchicago.edu/the-faculty/david_biron/"> Prof David Biron</a> in the Biophysics Program and the James Franck Institute.</p>
 
 <p>My dissertation work revealed insight about the homeostatic regulation of <a href="https://xkcd.com/1345/">animal sleep</a> as well as lasting consequences of sleep loss
 during early development using the relatively simple and well-characterized nematode, <a href="https://www.genetics.org/content/200/2/387/"> <i>Caenorhabditis elegans</i></a>, as a model system.</p>
