--- a/index.html
+++ b/index.html
@@ -621,6 +621,8 @@ during early development using the relatively simple and well-characterized nema
 
 <p><a href="https://math.uchicago.edu/~chenlei/">Lei Chen</a> &ndash; PhD candidate in Mathematics advised by Prof Benson Farb at the University of Chicago</p>
 
+<p><a href="https://apps.ankiweb.net//">Anki</a> &ndash; spaced repetition is the best way to memorize anything</p>
+
 <p><a href="http://slatestarcodex.com/">Slate Star Codex</a> &ndash; the best blog on the Internet even when it&rsquo;s wrong</p>
 
 <p><a href="http://www.futilitycloset.com/">Futility Closet</a> &ndash; an idler&rsquo;s miscellany of compendious amusements</p>
