--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ during early development using the relatively simple and well-characterized nema
 
       <div class="pub-abstract" itemprop="text">
         
-        Disrupting nematode sleep revealed two distinct homeostatic behaviors depending on whether the stimulus was strong or weak. I found distinct molecular pathways and cells that regulate these behaviors: neuropeptide signaling through the neuropeptide-Y receptor homolog NPR-1 was needed for a brief extension of quiescence following weak stimuli. I later found that NPR-1 is needed only in the RMG neurons for this behavior to occur (data not shown in paper). In contrast, the stress-activated transcription factor DAF-16 in the insulin/IGF-1 pathway was needed in neurons for a sustained elevation in quiescence following strong stimuli.
+        Disrupting nematode sleep revealed two distinct homeostatic behaviors depending on whether the stimulus was strong or weak. I found distinct molecular pathways and cells that regulate these behaviors: neuropeptide signaling through NPR-1 was needed for a brief extension of quiescence following weak stimuli. I later found that NPR-1 is needed only in the RMG neurons for this behavior to occur (data not shown in paper). In contrast, the stress-activated transcription factor DAF-16 in the insulin/IGF-1 pathway was needed in neurons for a sustained elevation in quiescence following strong stimuli.
         
       </div>
 
