--- a/publication/clothing-search/index.html
+++ b/publication/clothing-search/index.html
@@ -173,7 +173,7 @@
     <h1 itemprop="name">The *Caenorhabditis elegans* interneuron ALA is (also) a high-threshold mechanosensor</h1>
     <span class="pub-authors" itemprop="author">
       
-      Jarred Sanders, Stanislav Nagy, Graham Fetterman, Charles Wright, Millet Treinen, David Biron
+      Jarred Sanders* , Stanislav Nagy, Graham Fetterman, Charles Wright, Millet Treinen, David Biron
       
     </span>
     <span class="pull-right">
@@ -312,7 +312,10 @@
 
   <div class="space-below"></div>
 
-  <div class="article-style"></div>
+  <div class="article-style"><ul>
+<li>A * denotes first author contribution</li>
+</ul>
+</div>
 
 </div>
 
