--- a/publication/person-re-identification/index.html
+++ b/publication/person-re-identification/index.html
@@ -178,7 +178,7 @@
     <h1 itemprop="name">Homeostasis in *C. elegans* sleep is characterized by two behaviorally and genetically distinct mechanisms</h1>
     <span class="pub-authors" itemprop="author">
       
-      Stanislav Nagy, Jarred Sanders, Nora Tramm, Shachar Iwanir, Ian A Shirley, Erel Levine, David Biron
+      Stanislav Nagy* , Jarred Sanders* , Nora Tramm* , Shachar Iwanir, Ian A Shirley, Erel Levine, David Biron
       
     </span>
     <span class="pull-right">
@@ -321,7 +321,10 @@
 
   <div class="space-below"></div>
 
-  <div class="article-style"></div>
+  <div class="article-style"><ul>
+<li>A * denotes first author contribution</li>
+</ul>
+</div>
 
 </div>
 
