--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ during early development using the relatively simple and well-characterized nema
 
 <p><a href="https://en.wikipedia.org/wiki/M%C3%BCnchhausen_trilemma">M&uuml;nchhausen trilemma</a> &ndash; curiouser and curiouser!</p>
 
-<p><a href="https://pastebin.com/f341e113e/">&ldquo;The Hundred Light-Year Diary&rdquo;</a> from Greg Egan&rsquo;s <em>Axiomatic</em></p>
+<p><a href="https://www.dropbox.com/s/4p88afick4lmg1q/THE%20HUNDRED.pdf?dl=0/">&ldquo;The Hundred Light-Year Diary&rdquo;</a> from Greg Egan&rsquo;s <em>Axiomatic</em></p>
 
 <p><a href="https://youtu.be/E86phiV8w2M/">&ldquo;Do Your Thing&rdquo;</a> from Moondog&rsquo;s <em>H&rsquo;art songs</em></p>
 
