--- a/index.html
+++ b/index.html
@@ -595,7 +595,11 @@ during early development using the relatively simple and well-characterized nema
 
 <ul>
 <li>BSDG50000: Teaching Training Course (Autumn 2012)</li>
-<li>BIOS13107: Environmental Ecology (Winter 2013)</li>
+<li>BIOS13107: Environmental Ecology (Winter 2013)
+
+<ul>
+<li><a href="https://www.dropbox.com/s/qrb9azz1nyy4vka/Environmental_Ecology_Student_Evaluations.pdf?dl=0/">Link to student comments on my performance</a></li>
+</ul></li>
 </ul>
 
   </div>
@@ -633,7 +637,7 @@ during early development using the relatively simple and well-characterized nema
 
 <p><a href="https://www.dropbox.com/s/4p88afick4lmg1q/THE%20HUNDRED.pdf?dl=0/">&ldquo;The Hundred Light-Year Diary&rdquo;</a> from Greg Egan&rsquo;s <em>Axiomatic</em></p>
 
-<p><a href="https://youtu.be/E86phiV8w2M/">&ldquo;Do Your Thing&rdquo;</a> from Moondog&rsquo;s <em>H&rsquo;art songs</em></p>
+<p><a href="https://en.wikipedia.org/wiki/Moondog">Moondog</a> &ndash; a blind composer from New York City</p>
 
   </div>
 </div>
