--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ during early development using the relatively simple and well-characterized nema
 
       <div class="pub-abstract" itemprop="text">
         
-        Disrupting nematode sleep revealed two distinct homeostatic behaviors depending on whether the stimulus was strong or weak. I found distinct molecular pathways and cells that regulate these behaviors. Following weak stimuli, neuropeptide signaling through NPR-1 was needed for a brief extension of quiescence. I later found that NPR-1 is needed only in the RMG neurons for this behavior to occur (data not shown in paper). In contrast, a sustained elevation in quiescence following strong stimuli required a stress-activated transcription factor DAF-16 in the insulin/IGF-1 pathway. Expression of DAF-16 in neurons but not in the animal&#39;s muscle or intestine was required for this homeostatic response.
+        Disrupting nematode sleep revealed two distinct homeostatic behaviors depending on whether the stimulus was strong or weak. I found distinct molecular pathways and cells that regulate these behaviors. Following weak stimuli, neuropeptide signaling through NPR-1 was needed for a brief extension of quiescence. I later found that NPR-1 is needed only in the RMG neurons for this behavior to occur (data not shown in paper). In contrast, a sustained elevation in quiescence following strong stimuli required the stress-activated transcription factor DAF-16/FoxO. Expression of DAF-16 in neurons but not in the muscles or intestine was required for this homeostatic response. Moreover, DAF-16 was not needed for the homeostatic response to weak stimuli, and NPR-1 was unnecessary for the response to strong stimuli.
         
       </div>
 
