--- a/index.html
+++ b/index.html
@@ -638,6 +638,8 @@ during early development using the relatively simple and well-characterized nema
 
 <p><a href="https://www.dropbox.com/s/4p88afick4lmg1q/THE%20HUNDRED.pdf?dl=0/">&ldquo;The Hundred Light-Year Diary&rdquo;</a> from Greg Egan&rsquo;s <em>Axiomatic</em></p>
 
+<p><a href="https://www.dropbox.com/s/up75tcauyyj5e4a/Reasons-To-Be-Cheerful.pdf?dl=0">&ldquo;Reasons to be Cheerful&rdquo;</a> from Greg Egan&rsquo;s <em>Luminous</em></p>
+
   </div>
 </div>
 
