--- a/publication/deprivation/index.html
+++ b/publication/deprivation/index.html
@@ -237,8 +237,8 @@
         <div class="col-xs-12 col-sm-3 pub-row-heading">Type</div>
         <div class="col-xs-12 col-sm-9">
           
-          <a href="/publication/#3">
-            Under Peer Review
+          <a href="/publication/#4">
+            Submitted to Journal
           </a>
           
         </div>
@@ -254,7 +254,7 @@
     <div class="col-sm-10">
       <div class="row">
         <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-        <div class="col-xs-12 col-sm-9">Submitted to <em>BMC Biology</em></div>
+        <div class="col-xs-12 col-sm-9">Accepted for publication in <em>BMC Biology</em></div>
       </div>
     </div>
     <div class="col-sm-1"></div>
