--- a/publication_types/4/index.html
+++ b/publication_types/4/index.html
@@ -177,6 +177,13 @@
   
   
   <div>
+    <h2><a href="https://aridsand.github.io/publication/deprivation/">Distinct unfolded protein responses mitigate effects of nonlethal deprivation of *C. elegans* sleep in different tissues</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="https://aridsand.github.io/publication/anne/">Sleep bouts are not essential for *C. elegans* survival, but FoxO is important for compensatory sleep</a></h2>
     <div class="article-style">
       
