--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 
 <h1 id="welcome">Welcome!</h1>
 
-<p>I am a postdoctoral scientist studying innate immunity with Prof Erel Levine of Harvard University. I  earned my doctorate in Genetics, Genomics, and Systems Biology
-at the <a href="https://www.uchicago.edu/">University of Chicago</a> where I worked with <a href="https://bironlab.psd.uchicago.edu"> Prof David Biron</a>.</p>
+<p>I am a postdoctoral scientist studying innate immunity with Prof Erel Levine of <a href="https://www.harvard.edu/" target="_blank">Harvard University</a>. I  earned my doctorate in Genetics, Genomics, and Systems Biology
+at the <a href="https://www.uchicago.edu/">University of Chicago</a> where I worked with Prof David Biron.</p>
 
 <p>My dissertation work revealed insight about the homeostatic regulation of <a href="https://xkcd.com/1345/">animal sleep</a> as well as lasting consequences of sleep loss
 during early development using the relatively simple and well-characterized nematode, <a href="https://www.genetics.org/content/200/2/387/"> <i>Caenorhabditis elegans</i></a>, as a model system.</p>
