--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('https://aridsand.github.io/img/portrait3.jpg');"></div>
-      <meta itemprop="image" content="https://aridsand.github.io/img/portrait3.jpg">
+      <div class="portrait" style="background-image: url('https://aridsand.github.io/img/portrait2.jpg');"></div>
+      <meta itemprop="image" content="https://aridsand.github.io/img/portrait2.jpg">
       
 
       <div class="portrait-title">
@@ -252,7 +252,7 @@
 at the <a href="https://www.uchicago.edu/">University of Chicago</a> where I worked with Prof David Biron.</p>
 
 <p>My dissertation work revealed insight about the homeostatic regulation of <a href="https://xkcd.com/1345/">animal sleep</a> as well as lasting consequences of sleep loss
-during early development using the relatively simple and well-characterized nematode, <a href="https://www.genetics.org/content/200/2/387/"> <i>Caenorhabditis elegans</i></a>, as a model system.</p>
+during early development using the simple and well-characterized nematode <a href="https://www.genetics.org/content/200/2/387/"> <i>Caenorhabditis elegans</i></a> as a model system.</p>
 
 <p>Here is a link to my <a href="https://www.dropbox.com/s/7dcjyem23rtx9y0/CV.pdf?dl=0/"><strong>CV</strong></a></p>
 
