Updated publication and links

--- a/404.html
+++ b/404.html
@@ -179,7 +179,7 @@
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://aridsand.github.io/publication/deprivation/">Distinct unfolded protein responses mitigate effects of nonlethal deprivation of *C. elegans* sleep in different tissues</a></li>
+    <li><a href="https://aridsand.github.io/publication/deprivation/">Distinct unfolded protein responses mitigate or mediate effects of nonlethal deprivation of *C. elegans* sleep in different tissues</a></li>
   </ul>
   
   <ul>
