--- a/publication/index.html
+++ b/publication/index.html
@@ -197,9 +197,9 @@
           
         
 
-        <div class="grid-sizer col-md-12 isotope-item pubtype-4">
+        <div class="grid-sizer col-md-12 isotope-item pubtype-2">
           <i class="fa fa-file-text-o" aria-hidden="true"
-             style="color:#03396c;font-size:80%;padding-top:6px; padding-right: 10px;"></i>Distinct unfolded protein responses mitigate effects of nonlethal deprivation of *C. elegans* sleep in different tissues
+             style="color:#03396c;font-size:80%;padding-top:6px; padding-right: 10px;"></i>Distinct unfolded protein responses mitigate or mediate effects of nonlethal deprivation of *C. elegans* sleep in different tissues
           <p>
 
 
@@ -209,11 +209,19 @@
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.dropbox.com/s/quiieeazqf813co/Sanders%20B">
+  PDF
+</a>
 
 
 
 
 
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://bmcbiol.biomedcentral.com/articles/10.1186/s12915-017-0407-1">
+  Link to Journal
+</a>
 
 </p>
         </div>
