--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -177,6 +177,13 @@
   
   
   <div>
+    <h2><a href="https://aridsand.github.io/publication/deprivation/">Distinct unfolded protein responses mitigate or mediate effects of nonlethal deprivation of *C. elegans* sleep in different tissues</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="https://aridsand.github.io/publication/person-re-identification/">Homeostasis in *C. elegans* sleep is characterized by two behaviorally and genetically distinct mechanisms</a></h2>
     <div class="article-style">
       
