--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ during early development using the simple and well-characterized nematode <a hre
 
 <p><a href="https://docs.google.com/file/d/0B3txsxZo4NR4X2FaZkFrdXJ1NE0/edit?u">&ldquo;Asterios Polyp&rdquo;</a> by David Mazzucchelli</p>
 
-<p><a href="https://youtu.be/vsINANZ6Riw?t=29s">&ldquo;Baba Yetu&rdquo;</a> composed by Christopher Tin, version performed by Alex Boye and BYU Men&rsquo;s Chorus &amp; Philharmonic</p>
+<p><a href="https://youtu.be/r6qi393Z7L8">&ldquo;Baba Yetu&rdquo;</a> composed by Christopher Tin</p>
 
   </div>
 </div>
