--- a/404.html
+++ b/404.html
@@ -195,6 +195,10 @@
   </ul>
   
   <ul>
+    <li><a href="https://aridsand.github.io/publication/waiting/">Male Mating Behaviour: The Importance of Waiting</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://aridsand.github.io/publication/wait/">Male Mating Behaviour: The importance of waiting</a></li>
   </ul>
   
