--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -191,6 +191,13 @@
   </div>
   
   <div>
+    <h2><a href="https://aridsand.github.io/publication/waiting/">Male Mating Behaviour: The Importance of Waiting</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="https://aridsand.github.io/publication/clothing-search/">The *Caenorhabditis elegans* interneuron ALA is (also) a high-threshold mechanosensor</a></h2>
     <div class="article-style">
       
