--- a/index.html
+++ b/index.html
@@ -636,9 +636,7 @@ during early development using the simple and well-characterized nematode <a hre
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p><strong>Below are curated links to people and things I like:</strong></p>
-
-<p><a href="https://math.uchicago.edu/~chenlei/">Lei Chen</a> &ndash; PhD candidate in Mathematics advised by Prof Benson Farb at the University of Chicago</p>
+    <p><strong>Below are curated links to things I like:</strong></p>
 
 <p><a href="http://www.futilitycloset.com/">Futility Closet</a> &ndash; an idler&rsquo;s miscellany of compendious amusements</p>
 
