--- a/index.html
+++ b/index.html
@@ -640,9 +640,9 @@ during early development using the simple and well-characterized nematode <a hre
 
 <p><a href="http://www.futilitycloset.com/">Futility Closet</a> &ndash; an idler&rsquo;s miscellany of compendious amusements</p>
 
-<p><a href="https://www.mikositalianice.com/">Miko&rsquo;s Italian Ice</a> &ndash; an oasis during Chicago summers (cash only)</p>
+<p><a href="https://www.mikositalianice.com/">Miko&rsquo;s Italian Ice (Chicago, IL)</a> &ndash; an oasis during Chicago summers (cash only)</p>
 
-<p><a href="https://www.yelp.com/biz/taco-loco-mexican-grill-somerville-2/">Taco Loco Mexican Grill &ndash; folks should taco &lsquo;bout the mouth joy of plantains in burritos more (cash only)</p>
+<p><a href="https://www.yelp.com/biz/taco-loco-mexican-grill-somerville-2/">Taco Loco Mexican Grill (Somerville, MA)</a> &ndash; experience the mouth joy of plantains in burritos (cash only)</p>
 
   </div>
 </div>
