--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ during early development using the simple and well-characterized nematode <a hre
 
 <p><a href="https://www.mikositalianice.com/">Miko&rsquo;s Italian Ice (Chicago, IL)</a> &ndash; an oasis during Chicago summers (cash only)</p>
 
-<p><a href="https://backbarunion.com/">backbar (Somerville, MA)</a> &ndash; eclectic and cozy speakeasy hidden in Union Square</p>
+<p><a href="https://backbarunion.com/">backbar (Somerville, MA)</a> &ndash; an eclectic and cozy speakeasy hidden in Union Square</p>
 
   </div>
 </div>
