--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         
 
         <li class="nav-item">
-          <a href="https://www.dropbox.com/s/7dcjyem23rtx9y0/CV.pdf?dl=0/" data-target="https://www.dropbox.com/s/7dcjyem23rtx9y0/CV.pdf?dl=0/">
+          <a href="https://www.dropbox.com/s/mujk8a983ankfw0/CV.pdf?dl=1" data-target="https://www.dropbox.com/s/mujk8a983ankfw0/CV.pdf?dl=1">
             
             <span>CV</span>
           </a>
@@ -250,11 +250,13 @@
 
 <p>I am a research scientist at <a href="https://www.sanofipasteur.com/" target="_blank">Sanofi-Pasteur</a> in the Department of Biological Design, Biochemistry, and Formulations in Cambridge, MA. I primarily work on engineering eukaryotic expression systems to create new antigen candidates for vaccines and to increase the yield and efficiency of known antigens.</p>
 
-<p>Previously, I was a postdoctoral scholar at <a href="https://scholar.harvard.edu/jarred/bio" target="_blank">Harvard University&rsquo;s Department of Physics</a> where I worked on the quantitative analysis of worm behavior which entailed the design, fabrication, and testing of new <a href="http://www.wormbook.org/chapters/www_microfluidics/microfluidics.html" target="_blank">microfluidic devices</a>.</p>
+<p>Previously, I was a postdoctoral scholar at <a href="https://scholar.harvard.edu/jarred/bio" target="_blank">Harvard University&rsquo;s Department of Physics</a> where I worked on the quantitative analysis of worm behavior. My research entailed the design, fabrication, and testing of new <a href="http://www.wormbook.org/chapters/www_microfluidics/microfluidics.html" target="_blank">microfluidic devices</a>.</p>
 
-<p>I earned my doctorate in Genetics, Genomics, and Systems Biology at the University of Chicago. There, I worked on the homeostatic regulation of <a href="https://xkcd.com/1345/" target="_blank">animal sleep</a> as well as the lasting consequences of sleep loss during early development using the relatively simple and well-characterized worm <a href="https://www.genetics.org/conent/200/2/387/" target="_blank">Caenorhabditis elegans</a> as a model system.</p>
+<p>Before moving east, I earned my doctorate in Genetics, Genomics, and Systems Biology at the University of Chicago. There, I worked on the homeostatic regulation of <a href="https://xkcd.com/1345/" target="_blank">animal sleep</a> as well as the lasting consequences of sleep loss during early development using the relatively simple and well-characterized worm <a href="https://www.genetics.org/content/200/2/387/" target="_blank">Caenorhabditis elegans</a> as a model system.</p>
 
 <p>Here is a link to my <a href="https://www.dropbox.com/s/mujk8a983ankfw0/CV.pdf?dl=1"><strong>CV</strong></a></p>
+
+<p>Here is a link to my <a href="https://scholar.google.co.uk/citations?user=bOaEkrUAAAAJ&hl=en"><strong>Google Scholar profile</strong></a></p>
 
 <p>My email address is <strong>jarredfsanders at gmail com</strong></p>
 
@@ -480,11 +482,19 @@
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="#ZgotmplZ">
+  PDF
+</a>
 
 
 
 
 
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://bmcneurosci.biomedcentral.com/articles/10.1186/s12868-018-0408-1">
+  Link to Journal
+</a>
 
 </p>
 </li>
