--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
 
 <p>Before moving east, I earned my doctorate in Genetics, Genomics, and Systems Biology at the University of Chicago. There, I worked on the homeostatic regulation of <a href="https://xkcd.com/1345/" target="_blank">animal sleep</a> as well as the lasting consequences of sleep loss during early development using the relatively simple and well-characterized worm <a href="https://www.genetics.org/content/200/2/387/" target="_blank">Caenorhabditis elegans</a> as a model system.</p>
 
-<p>Here is a link to my <a href="https://www.dropbox.com/s/mujk8a983ankfw0/CV.pdf?dl=1"><strong>CV</strong></a></p>
-
-<p>Here is a link to my <a href="https://scholar.google.co.uk/citations?user=bOaEkrUAAAAJ&hl=en"><strong>Google Scholar profile</strong></a></p>
+<p>Here is a link to a .pdf of my <a href="https://www.dropbox.com/s/mujk8a983ankfw0/CV.pdf?dl=1"><strong>CV</strong></a>
+Here is a link to a .doc of my <a href=https://www.dropbox.com/s/pqsuipol11yfzao/CV_Word.docx?dl=1"><strong>CV</strong></a>
+Here is a link to my <a href="https://scholar.google.co.uk/citations?user=bOaEkrUAAAAJ&hl=en"><strong>Google Scholar profile</strong></a></p>
 
 <p>My email address is <strong>jarredfsanders at gmail com</strong></p>
 
@@ -482,7 +482,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="#ZgotmplZ">
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.dropbox.com/s/p9he2pcts1p1emb/Bennett%20BMCNeuro%202018.pdf?dl=0">
   PDF
 </a>
 
@@ -650,9 +650,15 @@
 
 <p><a href="http://www.futilitycloset.com/">Futility Closet</a> &ndash; an idler&rsquo;s miscellany of compendious amusements</p>
 
+<p><a href="https://jspaint.app/">JSPaint</a> &ndash; MS Paint recreated as a JavaScript web app</p>
+
+<p><a href="https://lichess.org/</a> &ndash; an Internet chess server, but also perhaps the best web app I&rsquo;ve ever used</p>
+
+<p><a href="https://pinboard.in/u:cshalizi</a> &ndash; things that CMU professor Cosma Shalizi finds interesting&hellip; that I also <em>usually</em> find interesting</p>
+
 <p><a href="https://www.mikositalianice.com/">Miko&rsquo;s Italian Ice (Chicago, IL)</a> &ndash; an oasis during Chicago summers (cash only)</p>
 
-<p><a href="https://backbarunion.com/">backbar (Somerville, MA)</a> &ndash; an eclectic and cozy speakeasy hidden in Union Square</p>
+<p><a href="https://www.google.com/maps/d/u/0/viewer?mid=1Z1dI8hoBZSJNWFx2xr_MMxSxSxY&hl=en_US&ll=-3.81666561775622e-14%2C43.707409349999864&z=1"> &ndash; WiFi passwords from airports and lounges around the world</p>
 
   </div>
 </div>
