--- a/publication/anne/index.html
+++ b/publication/anne/index.html
@@ -287,7 +287,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="#ZgotmplZ">
+<a class="btn btn-primary btn-outline" href="https://www.dropbox.com/s/p9he2pcts1p1emb/Bennett%20BMCNeuro%202018.pdf?dl=0">
   PDF
 </a>
 
