--- a/publication/index.html
+++ b/publication/index.html
@@ -240,7 +240,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="#ZgotmplZ">
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.dropbox.com/s/p9he2pcts1p1emb/Bennett%20BMCNeuro%202018.pdf?dl=0">
   PDF
 </a>
 
