--- a/index.html
+++ b/index.html
@@ -654,9 +654,9 @@
 
 <p><a href="https://jspaint.app/">JSPaint</a> &ndash; MS Paint recreated as a JavaScript web app</p>
 
-<p><a href="https://lichess.org/>lichess</a> &ndash; an Internet chess server, but also perhaps the best web app I&rsquo;ve ever used</p>
+<p><a href="https://lichess.org/">lichess</a> &ndash; an Internet chess server, but also perhaps the best web app I&rsquo;ve ever used</p>
 
-<p><a href="https://pinboard.in/u:cshalizi>Cosma&rsquo;s pinboard</a> &ndash; things that CMU professor Cosma Shalizi finds interesting&hellip; that I also <em>usually</em> find interesting</p>
+<p><a href="https://pinboard.in/u:cshalizi">Cosma&rsquo;s pinboard</a> &ndash; things that CMU professor Cosma Shalizi finds interesting&hellip; that I also <em>usually</em> find interesting</p>
 
 <p><a href="https://www.mikositalianice.com/">Miko&rsquo;s Italian Ice (Chicago, IL)</a> &ndash; an oasis during Chicago summers (cash only)</p>
 
